reviewed up  to ESH and OH in background --- added authentication models and communication scenarios

--- a/master-thesis.bib
+++ b/master-thesis.bib
@@ -12,6 +12,13 @@
 % JAX-RS Programmatic Security https://dennis-xlc.gitbooks.io/restful-java-with-jax-rs-2-0-2rd-edition/content/en/part1/chapter15/programmatic_security.html
 % ESH Fork with JWT Authentication https://github.com/antoniosv/smarthome/tree/customhttpcontext/bundles/auth/org.eclipse.smarthome.auth.jwt
 
+@misc{eu_law,
+  title = {2018 reform of EU data protection rules},
+  author = {European Comission},
+  note = {Date accessed: 2018-05-15},
+  howpublished={\url{https://ec.europa.eu/commission/priorities/justice-and-fundamental-rights/data-protection/2018-reform-eu-data-protection-rules_en}}
+
+}
 
 @misc{owasp,
 title = {OWASP Internet of Things Project},
@@ -291,6 +298,7 @@ howpublished = {\url{https://openremote.github.io/archive-dotorg/forums/Security
 
 @misc{rest_03,
  title = {{OSGi - JAX-RS Connector 5.3.1}},
+ author = {Holger Staudacher},
  note = {Date accessed: 2018-05-12},
  howpublished = {\url{https://github.com/hstaudacher/osgi-jax-rs-connector}}
 }
